Comit by Narendra Sisodiya 1

--- a/JS2.html
+++ b/JS2.html
@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<p>JavaScript can react to events.like the click of a button</p>
+<p>JavaScript can react to events.like the click of a button, Or Double Click</p>
 
 <button type="button" onclick="alert('welcome')">Click me</button>
 
