--- a/JS1.html
+++ b/JS1.html
@@ -10,7 +10,7 @@ document.getElementById("demo").innerHTML=Date();
 <body>
 
 <h1>My first JavaScript</h1>
-<h2>Now, I am at Delhi</h2>
+<h2>Now, I am at Delhi, hahha</h2>
 <p id="demo">this is a paragraph</p>
 <button type="button" onClick="displayDate()">Show Date</button>
 
