added alt attribuhe

--- a/JS4.html
+++ b/JS4.html
@@ -14,7 +14,7 @@ else
    }
 }
 </script>
-<img id="myimage" onclick="changeImage()" src="bulb_off.gif">
+<img alt="Sorry, There is no Image on Server" id="myimage" onclick="changeImage()" src="bulb_off.gif">
 
 <p>Click on the bulb to tern on the ligth</p>
 
